feat: use new font roboto for english and number

--- a/shell/index.html
+++ b/shell/index.html
@@ -6,13 +6,19 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Erda</title>
   <meta name="description" content="新一代企业级云原生 PaaS 平台，助力企业构建领先的数字化架构">
-  <link rel="shortcut icon" href="/static/favicon.ico">
+  <link rel="shortcut icon" href="/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!--  dice  -->
   <link class='icon-style dice-icon' rel="stylesheet" href="//at.alicdn.com/t/font_500774_kzpe8fzg3t.css">
   <style type="text/css">
+    @font-face {
+      font-family: "Roboto-Regular";
+      src: url('/roboto-regular.ttf') format('opentype'); /* vite static dir is root */
+    }
+
     body{
       margin: 0
+      font-family: "Roboto-Regular";
     }
 
     #erda-skeleton {
