--- a/shell/index.html
+++ b/shell/index.html
@@ -200,8 +200,7 @@
   <!-- layout -->
   <script src="https://lf1-cdn-tos.bytegoofy.com/obj/iconpark/icons_1776_8.ba89731a7541ef588c93a4ace53a6b3d.es5.js" ></script>
   <!-- dice iconpark -->
-  <script src="https://lf1-cdn-tos.bytegoofy.com/obj/iconpark/icons_138_238.5fe9a23bc7ad3d02c05a03280ec43e7a.es5.js
-  "></script>
+  <script src="https://lf1-cdn-tos.bytegoofy.com/obj/iconpark/icons_138_256.04dd1ef7ac4971bb6569c7d0bd58317e.es5.js"></script>
   <!-- $ -->
 </body>
 
