feat: debug api

--- a/shell/index.html
+++ b/shell/index.html
@@ -200,7 +200,8 @@
   <!-- layout -->
   <script src="https://lf1-cdn-tos.bytegoofy.com/obj/iconpark/icons_1776_8.ba89731a7541ef588c93a4ace53a6b3d.es5.js" ></script>
   <!-- dice iconpark -->
-  <script src="https://lf1-cdn-tos.bytegoofy.com/obj/iconpark/icons_138_353.c1d5da29a52aee877b91ad429ccda401.es5.js"></script>
+  <script src="https://lf1-cdn-tos.bytegoofy.com/obj/iconpark/icons_138_345.67e82c3431576c2da9a4f0852bf29782.es5.js
+  "></script>
   <!-- $ -->
 </body>
 
