--- a/shell/index.html
+++ b/shell/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Erda</title>
-  <meta name="description" content="新一代企业级云原生 PaaS 平台，助力企业构建领先的数字化架构">
+  <meta name="description" content="云上，应用协同开发平台">
   <link rel="shortcut icon" href="/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!--  dice  -->
