--- a/shell/index.html
+++ b/shell/index.html
@@ -13,157 +13,29 @@
   <style type="text/css">
     @font-face {
       font-family: "Roboto-Regular";
-      src: url('/roboto-regular.ttf') format('opentype'); /* vite static dir is root */
+      src: url('/roboto-regular.ttf') format('opentype');
+      /* vite static dir is root */
     }
-
     body {
-      margin: 0
-      font-family: "Roboto-Regular";
+      margin: 0 font-family: "Roboto-Regular";
+      background-color:#f3f2f4;
     }
 
-    #erda-skeleton {
-      position: fixed;
-      top: 0;
-      left: 0;
-      z-index: 999;
-      display: flex;
-      width: 100%;
-      height: 100%;
-      pointer-events: none;
-    }
-
-    .skeleton-nav {
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      width: 48px;
-      height: 100%;
-      padding: 0 8px;
-      color: #ffffff;
-      box-sizing: border-box;
-      text-align: center;
-      background: #6a549e;
-    }
-
-    .skeleton-nav .nav-item {
-      width: 32px;
-      height: 32px;
-      margin-bottom: 8px;
-    }
-
-    .skeleton-nav i {
-      margin-right: 0;
-      font-size: 20px;
-    }
-
-    .skeleton-sidebar-info {
-      padding-top: 16px;
-      padding-bottom: 36px;
-      text-align: center;
-    }
-
-    .skeleton-header {
-      padding: 10px 16px 9px;
-      border-bottom: 1px solid rgba(0, 0, 0, .1);
-    }
-
-    .skeleton-body {
-      position: relative;
-      display: flex;
-      flex: 1;
-      flex-direction: column;
-      overflow: hidden;
-    }
-
-    .skeleton-bg {
-      background-color: #e4e4e4;
-    }
-
-    .skeleton-logo {
-      display: inline-block;
-      width: 56px;
-      height: 56px;
-      margin-bottom: 30px;
-      border-radius: 100%;
-    }
-
-    .skeleton-line {
-      height: 20px;
-      margin-top: 6px;
-      margin-bottom: 12px;
-    }
-
-    .skeleton-icon-line {
-      height: 24px;
-      margin-left: 28px;
-    }
-
-    .skeleton-icon-line:before {
-      position: relative;
-      left: -28px;
-      display: inline-block;
-      width: 24px;
-      height: 24px;
-      margin-right: 8px;
-      background-color: #e4e4e4;
-      border-radius: 100%;
-      content: "";
-    }
-
-    .main-holder {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      height: 80%;
-      color: #bbbbbb;
-      font-size: 30px;
-    }
-
-    .main-holder span {
-      margin-top: 30px;
-    }
-
-    #enter-loading {
-      position: relative;
-      width: 300px;
-      height: 4px;
-      margin: 46px auto 20px;
-      overflow: hidden;
-      background-color: #bbbbbb;
-      border-radius: 2px;
-    }
-
-    #enter-loading::before {
-      position: absolute;
-      display: block;
-      width: 100%;
-      height: 100%;
-      background-color: #6a549e;
-      border-radius: 2px;
-      transform: translateX(-300px);
-      animation: a-lb 6s .2s linear forwards;
-      content: "";
-    }
-
-    @keyframes a-lb {0% {transform:translateX(-300px);}
-    5% {transform:translateX(-240px);}
-    15% {transform:translateX(-30px);}
-    25% {transform:translateX(-30px);}
-    30% {transform:translateX(-20px);}
-    45% {transform:translateX(-20px);}
-    50% {transform:translateX(-15px);}
-    65% {transform:translateX(-15px);}
-    70% {transform:translateX(-10px);}
-    95% {transform:translateX(-10px);}
-    100% {transform:translateX(-5px);}
-      }
-
+    #erda-skeleton{display:flex;align-items:center;justify-content:center;position:fixed;z-index:999;width:100%;height:100%;pointer-events:none}
+    .e-loading-content{position:relative;width:20px;height:20px;animation:e-loading 2s ease infinite}.e-loading-point{position:absolute;display:inline-block;width:20px;height:20px;border-radius:100%}.e-loading-lt{left:0;top:0;background-color:#1890ff;animation:e-loading-lt 2s ease 0s infinite}.e-loading-rt{right:0;top:0;background-color:#d84b65;animation:e-loading-rt 2s ease 0s infinite}.e-loading-lb{left:0;bottom:0;background-color:#27c99a;animation:e-loading-lb 2s ease 0s infinite}.e-loading-rb{right:0;bottom:0;background-color:#f4b518;animation:e-loading-rb 2s ease 0s infinite}@keyframes e-loading{0%{transform:rotate(0deg)}35%{transform:rotate(20deg)}65%{transform:rotate(360deg)}90%{transform:rotate(380deg)}100%{transform:rotate(480deg)}}@keyframes e-loading-lt{35%{transform:translate(-40px,-40px)}65%{transform:translate(-40px,-40px)}}@keyframes e-loading-rt{35%{transform:translate(40px,-40px)}65%{transform:translate(40px,-40px)}}@keyframes e-loading-lb{35%{transform:translate(-40px,40px)}65%{transform:translate(-40px,40px)}}@keyframes e-loading-rb{35%{transform:translate(40px,40px)}65%{transform:translate(40px,40px)}}
   </style>
 </head>
 
 <body>
   <div id="erda-content"></div>
+  <div id="erda-skeleton">
+    <div class="e-loading-content">
+      <div class="e-loading-point e-loading-lt"></div>
+      <div class="e-loading-point e-loading-rt"></div>
+      <div class="e-loading-point e-loading-lb"></div>
+      <div class="e-loading-point e-loading-rb"></div>
+    </div>
+  </div>
   <script>global = this;
     (function initFn() {
       fetch('/api/-/users/me').then(userRes => {
